<resources>
    <string name="app_name">BasketballGame</string>
    <string name="textview">TextView</string>
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="B_1" translatable="false">+1</string>
    <string name="A_2" translatable="false">+2</string>
    <string name="A_3" translatable="false">+3</string>
    <string name="textviewA" translatable="false">0</string>
    <string name="B_3" translatable="false">+3</string>
    <string name="B_2" translatable="false">+2</string>
    <string name="A_1" translatable="false">+1</string>
    <string name="redo">redo</string>
    <string name="reset">reset</string>
    <string name="TextViewB" translatable="false">0</string>
</resources>